--- a/scss/blocks/aside-pagination.scss
+++ b/scss/blocks/aside-pagination.scss
@@ -2,11 +2,15 @@
     position: fixed;
     top: 15%;
     right: 5%;
-    z-index: 15;
+    z-index: 50;
+
+    @include tablets {
+        display: none;
+    }
 }
 
 .pagination__item {
-    margin-bottom: rem(15px);
+    margin-bottom: 15px;
     &:last-child {
         margin-bottom: 0;
     }
@@ -18,13 +22,14 @@
     &:before {
         display: block;
         content: '';
-        @include circle(rem(8px), #fff);
+        @include circle(8px, #fff);
     }
     &:hover:after {
         content: '';
+        display: block;
         position: absolute;
-        width: rem(20px);
-        height: rem(20px);
+        width: 20px;
+        height: 20px;
         border-radius: 50%;
         border: 1px solid #fff;
         top: 50%;
