--- a/scss/blocks/feedback.scss
+++ b/scss/blocks/feedback.scss
@@ -35,6 +35,11 @@
       opacity: 0.6;
     }
   }
+
+  @include tablets {
+    width: 50%;
+    height: 25vh;
+  }
 }
 
 .feedback__content {
@@ -43,6 +48,15 @@
   left: 7%;
   opacity: 0;
   z-index: 10;
+  text-align: center;
+
+  @include tablets {
+    left: 14%;
+    width: 75%;
+    margin: 0 auto;
+
+    
+  }
 }
 
 .feedback__subtitle {
@@ -51,6 +65,11 @@
   margin-bottom: rem(20px);
   color: #fff;
   text-transform: uppercase;
+
+  @include tablets {
+    margin-bottom: rem(10px);
+    
+  }
 }
 
 .feedback__text {
@@ -59,6 +78,11 @@
   width: calc(210/275*100%);
   line-height: 1.72;
   margin-bottom: rem(11px);
+
+  @include tablets {
+    width: 100%;
+    margin-bottom: 10px;
+  }
 }
 
 .feedback__btn {
