--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,23 +1,22 @@
 .header {
-	// @include clearfix;
-	// padding-top: 10px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding-top: rem(9px);
 }
 
-.header__logo {
-	// float: left;
-	// width: 31%;
-	// margin-right: 6px;
+.header__navigation {
+	display: flex;
+
 }
 
-.header__navigation {
-	// float: left;
-	// padding-top: 30px;
-	// margin-right: 3px;
-	display: flex;
+.header__logo {
+	width: 10.5%;
+	min-width: rem(80px);
+}
+
+.logo__img {
+	width: 100%;
 }
 
 .nav__list {
@@ -25,7 +24,10 @@
 	display: flex;
 	align-items: center;
 	margin-right: rem(15px);
-	// margin-right: 20px;
+	
+	@include tablets {
+		display: none;
+	}
 }
 
 .nav__item {
@@ -35,12 +37,12 @@
 		content: '';
 		@include circle (4px, #fff);
 		display: flex;
-		margin-left: 15px;
-		margin-right: 15px;
+		margin-left: rem(15px);
+		margin-right: rem(15px);
 	}
 	&:last-child:after
 	{
-			display: none;
+		display: none;
 	}
 }
 
@@ -48,7 +50,7 @@
 .nav__link {
 	font-family: 'ubuntu';
 	font-weight: 500;
-	font-size: 13px;
+	font-size: rem(13px);
 	color: #fff;
 	letter-spacing: 0.06px;
 	text-transform: uppercase;
@@ -64,5 +66,41 @@
 	background-color: $orange;
 	&:hover {
 		background-color: darken($color: $orange, $amount: 20%);
+	}
+}
+
+.hamburger-menu-link {
+	vertical-align: middle;
+	position: relative;
+	height: rem(22px);
+	align-items: center;
+	margin-left: rem(30px);
+  display: none;
+
+  @include tablets() {
+    display: flex;
+  }
+}
+
+.hamburger-menu-link__bars {
+	&, &:before, &:after {
+		background: #fff;
+		width: rem(24px);
+		height: rem(5px);
+		border-radius: rem(3px);
+	}
+
+	&:before, &:after {
+		content: "";
+		display: block;
+		position: absolute;
+	}
+
+	&:before {
+		top: 0;
+	}
+
+	&:after {
+		bottom: 0;
 	}
 }
