--- a/scss/blocks/order.scss
+++ b/scss/blocks/order.scss
@@ -10,20 +10,28 @@
 
 .title--order {
     color: $yellow;
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
 }
 
 .form__content {
     display: flex;
+
+    @include tablets {
+        flex-direction: column;
+        align-items: center;  
+    }
 }
 
 .form__col {
     display: flex;
     flex-direction: column;
     width: 50%;
-    margin-right: 20px;
+    margin-right: rem(20px);
     &:last-child {
         margin-right: 0;
+    }
+    @include tablets {
+        width: 66%;  
     }
 }
 
@@ -33,9 +41,9 @@
 }
 
 .form__title {
-    font-size: 14px;
+    font-size: rem(14px);
     font-weight: 300;
-    margin-bottom: 5px;
+    margin-bottom: rem(5px);
 }
 
 .form__block {
@@ -49,7 +57,7 @@
 .form__input {
     border: none;
     border-radius: 5px;
-    padding: 10px 15px;
+    padding: rem(10px) rem(15px);
     width: 100%;
     &--textarea {
         height: 110px;
@@ -120,6 +128,6 @@
 .reset-btn {
     background: transparent;
     color: white;
-    font-size: 14px;
+    font-size: rem(14px);
     font-weight: 300;
 }
