--- a/scss/layout/adjustments.scss
+++ b/scss/layout/adjustments.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: 100%;
-    min-width: 960px;
+    // min-width: 960px;
     min-height: 100%;
     position: relative;
     overflow: hidden;
@@ -24,7 +24,7 @@
 }
 
 .title {
-    font-size: 72px;
+    font-size: rem(72px);
     font-family: "gagalin";
     text-transform: uppercase;
     font-weight: 700;
