--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ html {
       font-size: 16px; } }
   @media screen and (max-width: 480px) {
     html {
-      font-size: 14px; } }
+      font-size: 16px; } }
 
 body {
   margin: 0;
@@ -317,6 +317,11 @@ table {
 .title--best {
   text-align: center;
   margin-bottom: 1.875rem; }
+  @media screen and (max-width: 480px) {
+    .title--best {
+      font-size: 3.125rem;
+      padding-left: 1.5625rem;
+      margin-bottom: 1.25rem; } }
 
 .best__list {
   display: -webkit-box;
@@ -325,6 +330,18 @@ table {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
+  @media screen and (max-width: 480px) {
+    .best__list {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start; } }
 
 .best__item {
   display: -webkit-box;
@@ -339,29 +356,38 @@ table {
   justify-content: flex-start;
   text-align: center;
   width: calc(100%/3); }
+  @media screen and (max-width: 480px) {
+    .best__item {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      width: 100%;
+      margin-bottom: 2.8125rem; } }
 
 .best__item div {
   text-align: center;
   height: 7.5rem; }
+  @media screen and (max-width: 480px) {
+    .best__item div {
+      text-align: left;
+      margin-right: 2.1875rem; }
+      .best__item div:last-child {
+        margin-right: 0; } }
 
 .best__item svg {
   width: 97px;
   height: 89px; }
-
-.best__item:nth-child(1) svg {
-  fill: #e25028; }
-
-.best__item:nth-child(2) svg {
-  fill: #f8b43a; }
-
-.best__item:nth-child(3) svg {
-  fill: #8ac03e; }
 
 .best__item h3 {
   font-family: "lifehack";
   font-size: 1.5625rem;
   line-height: 1.27;
   margin-bottom: 0.8125rem; }
+  @media screen and (max-width: 480px) {
+    .best__item h3 {
+      margin-bottom: 0.625rem;
+      white-space: nowrap; } }
 
 .best__item p {
   margin: 0;
@@ -403,16 +429,29 @@ table {
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center; } }
+  @media screen and (max-width: 480px) {
+    .team__content {
+      width: 100%;
+      padding-left: 30px; } }
 
 .title--team {
   color: #f8b43a;
   margin-bottom: 1.5625rem; }
+  @media screen and (max-width: 480px) {
+    .title--team {
+      font-size: 2.8125rem;
+      letter-spacing: 0.1875rem;
+      padding-left: 0.625rem;
+      margin-bottom: 15px; } }
 
 .v-accordeon__item {
   margin-bottom: 1.375rem; }
   @media screen and (max-width: 768px) {
     .v-accordeon__item {
       margin-bottom: 0; } }
+  @media screen and (max-width: 480px) {
+    .v-accordeon__item {
+      margin-bottom: 5px; } }
 
 .v-accordeon__content {
   display: -webkit-box;
@@ -527,6 +566,11 @@ table {
   @media screen and (max-width: 768px) {
     .title--menu {
       left: 3%; } }
+  @media screen and (max-width: 480px) {
+    .title--menu {
+      font-size: 3.125rem;
+      left: 13%;
+      top: 5%; } }
 
 .h-accordeon__list {
   position: absolute;
@@ -585,6 +629,9 @@ table {
   @media screen and (max-width: 768px) {
     .h-accordeon__trigger {
       width: 4.6875rem; } }
+  @media screen and (max-width: 480px) {
+    .h-accordeon__trigger {
+      width: 4.375rem; } }
 
 .h-accordeon__title {
   font-family: 'gagalin';
@@ -670,6 +717,9 @@ table {
   @media screen and (max-width: 768px) {
     .feedback__subtitle {
       margin-bottom: 0.625rem; } }
+  @media screen and (max-width: 480px) {
+    .feedback__subtitle {
+      font-size: 1.5625rem; } }
 
 .feedback__text {
   font-size: 0.875rem;
@@ -681,6 +731,9 @@ table {
     .feedback__text {
       width: 100%;
       margin-bottom: 10px; } }
+  @media screen and (max-width: 480px) {
+    .feedback__text {
+      display: none; } }
 
 .feedback__btn {
   display: inline-block;
@@ -694,6 +747,15 @@ table {
   font-weight: 500; }
   .feedback__btn:hover {
     background-color: black; }
+  @media screen and (max-width: 480px) {
+    .feedback__btn {
+      display: none; } }
+
+.feedback__btn--mobile {
+  display: none; }
+  @media screen and (max-width: 480px) {
+    .feedback__btn--mobile {
+      display: block; } }
 
 .order {
   background: url(../img/order_section/order-bg.jpg) 0 0/cover no-repeat;
