--- a/scss/blocks/best.scss
+++ b/scss/blocks/best.scss
@@ -7,11 +7,23 @@
 .title--best {
     text-align: center;
     margin-bottom: rem(30px);
+
+    @include phones {
+        font-size: rem(50px);
+        padding-left: rem(25px);
+        margin-bottom: rem(20px);
+    }
 }
 
 .best__list {
     display: flex; 
     justify-content: space-between;
+
+    @include phones {
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
 }
 
 .best__item {
@@ -20,11 +32,25 @@
     justify-content: flex-start;
     text-align: center;
     width: calc(100%/3);
+
+    @include phones {
+        flex-direction: row;
+        width: 100%;
+        margin-bottom: rem(45px);
+    }
 }
 
 .best__item div {
     text-align: center;
     height: rem(120px);
+
+    @include phones {
+        text-align: left;
+        margin-right: rem(35px);
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 }
 
 .best__item svg {
@@ -32,24 +58,16 @@
     height: 89px;
 }
 
-.best__item {
-    &:nth-child(1) svg {
-        fill: $orange;
-    }
-    &:nth-child(2) svg{
-        fill: $yellow;
-    }
-    &:nth-child(3) svg{
-        fill: $green;
-    }
-
-}
-
 .best__item h3 {
     font-family: "lifehack";
     font-size: rem(25px);
     line-height: 1.27;
     margin-bottom: rem(13px);
+
+    @include phones {
+        margin-bottom: rem(10px);
+        white-space: nowrap;    
+    }
 }
 
 .best__item p {
