--- a/scss/blocks/feedback.scss
+++ b/scss/blocks/feedback.scss
@@ -68,7 +68,10 @@
 
   @include tablets {
     margin-bottom: rem(10px);
-    
+  }
+
+  @include phones {
+    font-size: rem(25px);
   }
 }
 
@@ -82,6 +85,10 @@
   @include tablets {
     width: 100%;
     margin-bottom: 10px;
+  }
+
+  @include phones {
+    display: none;
   }
 }
 
@@ -97,6 +104,18 @@
   font-weight: 500;
   &:hover {
     background-color: darken($dark, 20%)
+  }
+
+  @include phones {
+    display: none;
+  }
+}
+
+.feedback__btn--mobile {
+  display: none;
+
+  @include phones {
+    display: block;
   }
 }
 
