--- a/scss/blocks/feedback.scss
+++ b/scss/blocks/feedback.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  height: 100%;
   font-size: 0;
 }
 
@@ -12,7 +13,7 @@
   background-repeat: no-repeat;
   overflow: hidden;
   width: 25%;
-  height: 50vh;
+  height: 50%;
   position: relative;
   filter: grayscale(100%);
   &:after {
@@ -38,7 +39,7 @@
 
   @include tablets {
     width: 50%;
-    height: 25vh;
+    height: 25%;
   }
 }
 
