--- a/css/main.css
+++ b/css/main.css
@@ -701,10 +701,10 @@ table {
   top: 14%;
   left: 7%;
   opacity: 0;
-  z-index: 10;
-  text-align: center; }
+  z-index: 10; }
   @media screen and (max-width: 768px) {
     .feedback__content {
+      text-align: center;
       left: 14%;
       width: 75%;
       margin: 0 auto; } }
