--- a/scss/layout/adjustments.scss
+++ b/scss/layout/adjustments.scss
@@ -15,6 +15,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include phones {
+        width: 98%;
+    }
 }
 
 .section {
