--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -10,7 +10,7 @@
 
 }
 
-.header__logo {
+.logo {
 	width: 10.5%;
 	min-width: rem(80px);
 }
@@ -36,7 +36,7 @@
 	&:after {
 		content: '';
 		@include circle (4px, #fff);
-		display: flex;
+		display: block;
 		margin-left: rem(15px);
 		margin-right: rem(15px);
 	}
