--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,3 +34,7 @@
 @import "blocks/footer.scss";
 
 @import "blocks/aside-pagination.scss";
+
+@import "blocks/hamburger-menu.scss";
+
+@import "blocks/burgers.scss";
