--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ html {
       font-size: 16px; } }
   @media screen and (max-width: 480px) {
     html {
-      font-size: 12px; } }
+      font-size: 16px; } }
 
 body {
   margin: 0;
@@ -131,8 +131,7 @@ table {
   display: flex; }
 
 .logo {
-  width: 10.5%;
-  min-width: 5rem; }
+  width: 5.625rem; }
 
 .logo__img {
   width: 100%; }
@@ -303,7 +302,7 @@ table {
   line-height: 0.98; }
   @media screen and (max-width: 480px) {
     .slogan__text {
-      font-size: 3.125rem; } }
+      font-size: 2.8125rem; } }
 
 .forward-arrow {
   position: absolute;
@@ -1143,7 +1142,237 @@ table {
     transform: rotate(-45deg); }
 
 .burgers {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, #f8b43a), color-stop(50%, #e25028), color-stop(80%, #f8b43a));
-  background: -webkit-linear-gradient(top, #f8b43a 20%, #e25028 50%, #f8b43a 80%);
-  background: -o-linear-gradient(top, #f8b43a 20%, #e25028 50%, #f8b43a 80%);
-  background: linear-gradient(to bottom, #f8b43a 20%, #e25028 50%, #f8b43a 80%); }
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, #f8b43a), color-stop(50%, #eb8c38), color-stop(80%, #f8b43a));
+  background: -webkit-linear-gradient(top, #f8b43a 20%, #eb8c38 50%, #f8b43a 80%);
+  background: -o-linear-gradient(top, #f8b43a 20%, #eb8c38 50%, #f8b43a 80%);
+  background: linear-gradient(to bottom, #f8b43a 20%, #eb8c38 50%, #f8b43a 80%); }
+
+.container--burgers {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  max-width: none;
+  margin: 0 3%; }
+  @media screen and (max-width: 768px) {
+    .container--burgers {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      margin: 0 2%; } }
+
+.left-block {
+  padding-left: 10px; }
+
+.arrow-right__pic {
+  fill: white;
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg); }
+
+.arrow-left__pic {
+  fill: white;
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg); }
+
+.slider {
+  height: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  @media screen and (max-width: 768px) {
+    .slider {
+      width: 89%; } }
+
+.slider__list {
+  height: 55%; }
+  @media screen and (max-width: 768px) {
+    .slider__list {
+      height: 100%; } }
+
+.slider__item {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  padding-top: 5%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  @media screen and (max-width: 768px) {
+    .slider__item {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      padding-top: 13%;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
+
+.ingredients {
+  width: 5.625rem;
+  height: 5.625rem;
+  position: absolute;
+  top: 0;
+  left: 1%;
+  background-color: #f08c33;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  @media screen and (max-width: 768px) {
+    .ingredients {
+      left: 12%;
+      top: 3%; } }
+
+.ingredients__pic {
+  fill: white; }
+
+.ingredients__desc {
+  font-family: 'gagalin';
+  font-size: 0.875rem;
+  color: white; }
+
+.kkal {
+  width: 3.75rem;
+  height: 4.875rem;
+  position: absolute;
+  bottom: 0;
+  left: 1%;
+  opacity: 0.5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  @media screen and (max-width: 768px) {
+    .kkal {
+      bottom: 87%;
+      left: 77%; } }
+
+.kkal__pic {
+  fill: white; }
+
+.kkal__pic-text {
+  fill: white;
+  font-size: 1.25rem;
+  font-family: 'gagalin'; }
+
+.kkal__desc {
+  font-family: 'gagalin';
+  font-size: 0.875rem;
+  color: white; }
+
+.slider__pic-wrap {
+  padding-top: 3%;
+  width: 51%;
+  margin-right: 2%; }
+  @media screen and (max-width: 768px) {
+    .slider__pic-wrap {
+      width: 75%;
+      margin-right: 0;
+      margin-bottom: 2%; } }
+  @media screen and (max-width: 480px) {
+    .slider__pic-wrap {
+      width: 100%;
+      margin-bottom: 0%; } }
+
+.slider__pic {
+  width: 100%; }
+
+.slider__desc {
+  width: 49%; }
+  @media screen and (max-width: 768px) {
+    .slider__desc {
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      text-align: center; } }
+
+.slider__title {
+  color: white;
+  line-height: .9;
+  margin-bottom: 10%; }
+  @media screen and (max-width: 768px) {
+    .slider__title {
+      width: 89%;
+      margin-bottom: 5%; } }
+  @media screen and (max-width: 480px) {
+    .slider__title {
+      width: 100%;
+      margin-bottom: 0%;
+      font-size: 3.125rem; } }
+
+.slider__text {
+  color: white;
+  font-size: 0.875rem;
+  line-height: 1.7;
+  margin-bottom: 2%; }
+  @media screen and (max-width: 768px) {
+    .slider__text {
+      width: 89%; } }
+  @media screen and (max-width: 480px) {
+    .slider__text {
+      width: 100%;
+      margin-bottom: 0%; } }
+
+.slider__order {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline; }
+  @media screen and (max-width: 768px) {
+    .slider__order {
+      width: 54%; } }
+
+.price {
+  font-family: 'gagalin';
+  font-size: 1.875rem;
+  color: #e25028;
+  margin-right: 3.5%; }
+
+.price__number {
+  font-size: 4.5rem; }
