--- a/scss/blocks/burgers.scss
+++ b/scss/blocks/burgers.scss
@@ -13,7 +13,11 @@
     @include tablets {
         justify-content: center;
         margin: 0 2%;
-        
+    }
+    
+    @include phones {
+        margin: 0 0;
+        width: 100%;
     }
 }
 
@@ -82,6 +86,11 @@
         left: 12%;
         top: 3%;
     }
+
+    @include phones {
+        left: -5%;
+        top: 8%;
+    }
 }
 
 .ingredients__pic {
@@ -109,6 +118,11 @@
     @include tablets {
         bottom: 87%;
         left: 77%;
+    }
+
+    @include phones {
+        bottom: 83%;
+        left: 94%;
     }
 }
 
@@ -141,7 +155,7 @@
     
     @include phones {
         width: 100%;
-        margin-bottom: 0%;
+        margin-bottom: 1%;
     }
 }
 
@@ -172,9 +186,10 @@
     }
 
     @include phones {
-        width: 100%;
+        width: 98%;
         margin-bottom: 0%;
         font-size: rem(50px);
+        line-height: 1.1;
     }
 }
 
@@ -190,7 +205,7 @@
 
     @include phones {
         width: 100%;
-        margin-bottom: 0%;
+        margin-bottom: 4%;
     }
 }
 
@@ -201,6 +216,11 @@
     @include tablets {
         width: 54%;
     }
+
+    @include phones {
+        width: 73%;
+        align-items: center;
+    }
 }
 
 .price {
@@ -208,8 +228,20 @@
     font-size: rem(30px);
     color: $orange;
     margin-right: 3.5%;
+
+    @include phones {
+        font-size: rem(24px);
+    }
+
+    @include phones {
+        margin-right: 10%;
+    }
 }
 
 .price__number {
     font-size: rem(72px);
+
+    @include phones {
+        font-size: rem(50px);
+    }
 }
